# siglent-web

./: .gitignore  README.md  pyproject.toml  run.sh  siglent_scope.py
