[project]
name = "siglent-scope"
version = "0.1.0"
description = "Screen mirror, data capture, and control for Siglent SDS1202X-E over USB on macOS"
requires-python = ">=3.11"
dependencies = [
    "pyvisa>=1.14",
    "pyvisa-py>=0.7",
    "pyusb>=1.2",
    "pillow>=10.0",
    "matplotlib>=3.8",
]

[project.scripts]
scope = "siglent_scope:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["siglent_scope.py"]
